Initial cut at partioning processing across cores
Havne't implemented the partitioned input yet, but prepared the
Processor for having multiple consuming capabilities. So far no
regression...tbd